    The value is changeable using the monitor command
    'v.set merge-recursive-frames'.

  - valgrind.h has a new request VALGRIND_MONITOR_COMMAND.
    This can be used to execute gdbserver monitor commands from
    the client program.

  - Addition of GDB server monitor command 'v.info open_fds' that gives the
    list of open file descriptors and additional details.

  - Addition of GDB server monitor command 'v.info execontext' that shows
    information about the stack traces recorded by Valgrind.
    This can be used to analyse one possible cause of Valgrind high
    memory usage for some programs.

  - Addition of GDB server monitor command
    'v.do expensive_sanity_check_general' that checks the sanity
    of various Valgrind aspects, including the Valgrind heap.

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

v = verified fixed in 3_8_BRANCH
m = merged into 3_8_BRANCH
[390] = fixed in trunk (for 3.9.0)
[381] = fixed in trunk and in 3_8_BRANCH, for 3.8.1
[382] = fixed in trunk and needs to be made available for 3.8.2 too

123837    [390] semctl system call: 4rth argument is optional, depending on cmd
135425    [390] memcheck should tell you where Freed blocks were Mallocd
252955    [390] Impossible to compile with ccache
253519  Memcheck reports auxv pointer accesses as invalid reads.
        FIXED r13109

274695    [390] s390x: Support "compare to/from logical" instructions (z196)